# rag-semantic-search

./: .dockerignore  .gitignore  ADR-indexer-audit.md  AGENTS.md  Dockerfile  README.md  WORKLOG.md  _entrypoint_shim.py  _platform_compat.py  app_ui.py  build_exe.bat  check_syntax.py  cloud_drive.py  config.docker.example.json  config.example.json  deploy_github.ps1  docker-compose.smoke.yml  docker-compose.yml  gemini_review_report.md  index_rag.py  monitor_index.ps1  nice_app.py  ocr_pdfs.py  pyproject.toml  pyrightconfig.json  rag_core.py  rag_search.py  rag_search_fixed.py  rag_sync_client.py  requirements.txt  run_after_index.ps1  run_automation.py  telegram_bot.py  telemetry_db.py  test_imports.py  user_auth_db.py  windows_app.py  ИНСТРУКЦИЯ.md
docs/: AGENT_WORKFLOW.md  ARCHITECTURE.md  CLOUD_SERVICE_ROADMAP.md  DEVELOPMENT.md  DOCKER.md  PILOT_RUNBOOK.md  PRODUCT_ROADMAP.md  RELEASE_ROADMAP.md  cloud_drive_roadmap.md  nav_roadmap.docx
eval/: search_golden.json
packaging/: RAG-Katalog-v2.spec  RAG-Katalog-v3.spec  RAG-Katalog.spec  build.ps1  build_cloud_files.ps1  build_cloud_files_shell.ps1  install_cloud_files.ps1  install_cloud_proxy.ps1  installer.iss  installer.wxs  rag_sync_client.spec
rag_catalog/: __init__.py
scripts/: check.ps1  clean_project.ps1  consistency_audit.py  generate_brand_assets.py  git_compare.ps1  git_overview.ps1  patch_modal_no_token.py  patch_sync_client_download.py  patch_sync_modal_two_buttons.py  patch_user_install_modal.py  pilot_ui_smoke.py  retrieval_review.py  retrieval_review_ui.py  search_eval.py  smoke_cloud_files_provider.py
tests/: conftest.py  test_chunking_text.py  test_cloud_drive_cli.py  test_cloud_drive_db.py  test_cloud_drive_operations.py  test_cloud_drive_registry.py  test_cloud_drive_storage.py  test_config_examples.py  test_consistency_audit.py  test_db_contract.py  test_embedding_collections.py  test_entrypoints.py  test_exact_tokens.py  test_extractors_office_formats.py  test_extractors_spreadsheets.py  test_extractors_text.py  test_finalize_search_index.py  test_index_scheduler.py  test_index_state_db.py  test_index_stop_actions.py  test_indexer_control.py  test_indexer_extract_pdf.py  test_indexer_file_category.py  test_indexer_image_tags.py  test_indexer_stage_logic.py  test_launcher.py  (+24 more)
(+105 files in other folders)
