[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-catalog"
version = "0.1.0"
description = "Семантический поиск по корпоративному каталогу (DOCX/XLSX/PDF) на базе Qdrant + sentence-transformers"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [
    { name = "Dmitry Kolobashek", email = "kolobashek@gmail.com" },
]
keywords = ["rag", "semantic-search", "qdrant", "sentence-transformers", "ocr"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Text Processing :: Indexing",
]
dependencies = [
    "streamlit>=1.28.0",
    "PyQt6>=6.5.0",
    "qdrant-client>=1.7.0",
    "sentence-transformers>=2.3.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.2",
    "xlrd>=2.0.1",
    "pdfplumber>=0.10.0",
    "tqdm>=4.66.0",
    "requests>=2.32.5,<3",
    "urllib3>=1.21.1,<3",
    "charset-normalizer>=2,<4",
    "chardet>=3.0.2,<6",
]

[project.optional-dependencies]
ocr = [
    "pytesseract>=0.3.10",
    "pdf2image>=1.16.3",
]
dev = [
    "pytest>=8.0.0",
    "pyinstaller>=6.0.0",
]

[project.scripts]
# После `pip install -e .` эти команды появятся в PATH.
rag-search       = "rag_catalog.cli.rag_search:main"
rag-search-fixed = "rag_catalog.cli.rag_search_fixed:main"
rag-index        = "rag_catalog.core.index_rag:main"
rag-ocr          = "rag_catalog.core.ocr_pdfs:main"
rag-telegram-bot = "rag_catalog.integrations.telegram_bot:main"

[project.gui-scripts]
rag-windows-app = "rag_catalog.ui.windows_app:main"

[project.urls]
Repository = "https://github.com/kolobashek/rag-catalog"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["rag_catalog*"]

[tool.setuptools.package-data]
rag_catalog = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src", "."]
